--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,11 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "lucide": "^0.474.0",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-redux": "^9.2.0",
