--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
